# realtpl

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-testing.yaml
realtpl/: ZeroDict.py  __init__.py  calc_all.py  calc_compressibility.py  calc_cp_ref_nasa.py  calc_cv_cp_sound.py  calc_visc_cond_chung.py  config.py  data_association_parameter.py  data_dipole_moment.py  eos_data.py  fluid_properties.py  nasa.py  nasa_7.yaml  nasa_9.yaml  ref_data_from_coolprop.py  thermophysical_constants.py  visualization.py  write_data_to_files.py
realtpl/tests/: test_nasa_coeff.py
realtpl/tests/examples/: C12H26_ECN_OP_8MPa.yaml  config.yaml  config_MWE.yaml  config_tables.yaml
realtpl/tests/regression/: config_test_Cyclopentane.yaml  config_test_air.yaml  config_test_hydrogen.yaml  config_test_nDodecane.yaml  test_regression.py
realtpl/tests/regression/reference/Air/data/: ref_data.csv
realtpl/tests/regression/reference/Cyclopentane/data/: PR.csv  RKPR.csv  SRK.csv  ref_data.csv
realtpl/tests/regression/reference/Hydrogen/data/: ref_data.csv
realtpl/tests/regression/reference/nDodecane/data/: PR.csv  RKPR.csv  SRK.csv  ref_data.csv
scripts/: realtpl
