[metadata]
name = realtpl
version = 0.0.8
author = T Trummler, M Glatzle
author_email = theresa.trummler@gmail.com
description = Computation of real gas thermodynamics for fluids at different pressures and temperatures.
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/ttrummler/realtpl
long_description_content_type = text/markdown
long_description = file:README.md
keywords = thermodynamics, cubic equation of state
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    pyyaml
    CoolProp
setup_requires = setuptools

[options.entry_points]
console_scripts =
    realtpl = realtpl:main

[options.package_data]
* = *.yaml
